--- a/WorkPage/src/style/partials/_paint.scss
+++ b/WorkPage/src/style/partials/_paint.scss
@@ -93,7 +93,7 @@ div#save {
 }
 
 div#save i::after {
-    content:'Pobierz';
+    content:'Save';
     font-size: 15px;
     margin-left: 10px;
     color: black;
